# pytorch-lightning-docker-example

./: .gitignore  README.md  lightning-test.ipynb  lightning-test.py  pyproject.toml  test-multiprocessing.ipynb
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  requirements.txt
